2011-01-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/Gamemenu_gump.cc: Allow more menus in Exult menu
	* gamewin.h: can_scroll_with_mouse() and set_mouse_with_scroll()
	* gumps/MiscOptionsGump.*: Add 3 options.
	* gumps/GameplayOptions_gump.cc: Don't show paperdolls when it is
		not an option.
	* all gumps except Gamemenu_gump.*: Only write to cfg once in
		save_settings()

2011-01-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Renamed CombatOptionsGump.* to MiscOptionsGump.*
	* Updated project files for this and newvideooptions.shp

2011-01-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	* exult.cc: Move cfg options so they don't get needlessly read
		during map build. Move config->write_back() to before
		initializing the Game_window. Use USE_OLD_VIDEO_OPTIONS_GUMP
	* gumps/VideoOptions_gump.cc : Move forced define of
		USE_OLD_VIDEO_OPTIONS_GUMP to header.

2011-01-15 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gamewin.cc: only write to cfg once in Game_window::Game_window

2011-01-15 Malignant Manor <malignantmanor@users.sourceforge.net>
	* exult.cc, gamewin.*: Add new cfg option to disable scrolling
		the game view with the scrollwheel (when in cheat mode).
		"config/gameplay/scroll_with_mouse" "yes" to allow scrolling.
		"no" to disable it. Default is "no".

2011-01-15 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/VideoOptions_gump.cc: Straiten out row values. More
		code changes for separate fullscreen and window settings
	* data/*: new video options gump shape added

2011-01-15 Malignant Manor <malignantmanor@users.sourceforge.net>
	* exult.*, keyactions.cc, gumps/VideoOptions_gump.*: New function
		"setup_video" to consolidate menu settable video configuration
		reading and writing and implementing it into existing code.
		Start code changes for separate fullscreen and window settings.

2011-01-10 Malignant Manor <malignantmanor@users.sourceforge.net>